parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CLASS
    CORCHETE_APERTURA
    CORCHETE_CIERRE
    DIVISION
    ELSE
    FOR
    FUN
    IF
    IGUAL
    LLAVE_APERTURA
    LLAVE_CIERRE
    MAYOR_IGUAL
    MAYOR_QUE
    MENOR_IGUAL
    MENOR_QUE
    MULTIPLICACION
    NOT
    OBJECT
    OR
    RESTA
    RETURN
    SUMA
    VOID
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones
Rule 2     declaraciones -> declaracion_variable declaraciones
Rule 3     declaraciones -> declaracion_variable
Rule 4     declaraciones -> declaracion_cad
Rule 5     declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 6     declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES
Rule 7     declaracion_cad -> PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 8     declaracion_cad -> ID tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 9     declaracion_cad -> ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 10    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 11    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 12    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES COMILLAS_DOBLES PUNTO_COMA
Rule 13    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR CADENA COMILLAS_DOBLES PUNTO_COMA
Rule 14    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA PUNTO_COMA
Rule 15    declaracion_cad -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA caracteres_adicionales
Rule 16    caracteres_adicionales -> caracteres_adicionales CADENA
Rule 17    caracteres_adicionales -> caracteres_adicionales NUMERO_ENTERO
Rule 18    caracteres_adicionales -> caracteres_adicionales NUMERO_FLOTANTE
Rule 19    caracteres_adicionales -> caracteres_adicionales ID
Rule 20    caracteres_adicionales -> caracteres_adicionales PUNTO_COMA
Rule 21    caracteres_adicionales -> caracteres_adicionales COMA
Rule 22    caracteres_adicionales -> caracteres_adicionales ASIGNAR
Rule 23    caracteres_adicionales -> CADENA
Rule 24    caracteres_adicionales -> NUMERO_ENTERO
Rule 25    caracteres_adicionales -> NUMERO_FLOTANTE
Rule 26    caracteres_adicionales -> ID
Rule 27    caracteres_adicionales -> PUNTO_COMA
Rule 28    caracteres_adicionales -> COMA
Rule 29    caracteres_adicionales -> ASIGNAR
Rule 30    declaracion_variable -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
Rule 31    declaracion_variable -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato
Rule 32    declaracion_variable -> PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
Rule 33    declaracion_variable -> ID tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
Rule 34    declaracion_variable -> ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
Rule 35    declaracion_variable -> ID PARENTESIS_APERTURA tipo_dato ASIGNAR valor_dato PUNTO_COMA
Rule 36    declaracion_variable -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE valor_dato PUNTO_COMA
Rule 37    declaracion_variable -> ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR PUNTO_COMA
Rule 38    tipo_dato -> INT
Rule 39    tipo_dato -> FLOAT
Rule 40    tipo_dato -> BOOL
Rule 41    tipo_dato -> STRING
Rule 42    valor_dato -> NUMERO_ENTERO
Rule 43    valor_dato -> NUMERO_FLOTANTE
Rule 44    valor_dato -> TRUE
Rule 45    valor_dato -> FALSE

Terminals, with rules where they appear

AND                  : 
ASIGNAR              : 5 6 7 8 9 10 12 13 14 15 22 29 30 31 32 33 34 35 37
BOOL                 : 40
CADENA               : 5 6 7 8 9 10 11 13 14 15 16 23
CLASS                : 
COMA                 : 21 28
COMILLAS_DOBLES      : 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 15
CORCHETE_APERTURA    : 
CORCHETE_CIERRE      : 
DIVISION             : 
ELSE                 : 
FALSE                : 45
FLOAT                : 39
FOR                  : 
FUN                  : 
ID                   : 5 6 8 9 10 11 12 13 14 15 19 26 30 31 33 34 35 36 37
IF                   : 
IGUAL                : 
INT                  : 38
LLAVE_APERTURA       : 
LLAVE_CIERRE         : 
MAYOR_IGUAL          : 
MAYOR_QUE            : 
MENOR_IGUAL          : 
MENOR_QUE            : 
MULTIPLICACION       : 
NOT                  : 
NUMERO_ENTERO        : 17 24 42
NUMERO_FLOTANTE      : 18 25 43
OBJECT               : 
OR                   : 
PARENTESIS_APERTURA  : 5 6 7 9 10 11 12 13 14 15 30 31 32 34 35 36 37
PARENTESIS_CIERRE    : 5 6 7 8 9 11 12 13 14 15 30 31 32 33 34 36 37
PUNTO_COMA           : 5 7 8 9 10 11 12 13 14 20 27 30 32 33 34 35 36 37
RESTA                : 
RETURN               : 
STRING               : 41
SUMA                 : 
TRUE                 : 44
VOID                 : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

caracteres_adicionales : 15 16 17 18 19 20 21 22
declaracion_cad      : 4
declaracion_variable : 2 3
declaraciones        : 1 2
programa             : 0
tipo_dato            : 5 6 7 8 10 11 12 13 14 15 30 31 32 33 35 36 37
valor_dato           : 30 31 32 33 34 35 36

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones
    (2) declaraciones -> . declaracion_variable declaraciones
    (3) declaraciones -> . declaracion_variable
    (4) declaraciones -> . declaracion_cad
    (30) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (31) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato
    (32) declaracion_variable -> . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (33) declaracion_variable -> . ID tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (34) declaracion_variable -> . ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (35) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato ASIGNAR valor_dato PUNTO_COMA
    (36) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE valor_dato PUNTO_COMA
    (37) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR PUNTO_COMA
    (5) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (6) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES
    (7) declaracion_cad -> . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (8) declaracion_cad -> . ID tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (9) declaracion_cad -> . ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (10) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (11) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (12) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES COMILLAS_DOBLES PUNTO_COMA
    (13) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR CADENA COMILLAS_DOBLES PUNTO_COMA
    (14) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA PUNTO_COMA
    (15) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA caracteres_adicionales

    ID              shift and go to state 5
    PARENTESIS_APERTURA shift and go to state 6

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    declaracion_variable           shift and go to state 3
    declaracion_cad                shift and go to state 4

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones .

    $end            reduce using rule 1 (programa -> declaraciones .)


state 3

    (2) declaraciones -> declaracion_variable . declaraciones
    (3) declaraciones -> declaracion_variable .
    (2) declaraciones -> . declaracion_variable declaraciones
    (3) declaraciones -> . declaracion_variable
    (4) declaraciones -> . declaracion_cad
    (30) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (31) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato
    (32) declaracion_variable -> . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (33) declaracion_variable -> . ID tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (34) declaracion_variable -> . ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (35) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato ASIGNAR valor_dato PUNTO_COMA
    (36) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE valor_dato PUNTO_COMA
    (37) declaracion_variable -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR PUNTO_COMA
    (5) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (6) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES
    (7) declaracion_cad -> . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (8) declaracion_cad -> . ID tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (9) declaracion_cad -> . ID PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (10) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (11) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (12) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES COMILLAS_DOBLES PUNTO_COMA
    (13) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR CADENA COMILLAS_DOBLES PUNTO_COMA
    (14) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA PUNTO_COMA
    (15) declaracion_cad -> . ID PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA caracteres_adicionales

    $end            reduce using rule 3 (declaraciones -> declaracion_variable .)
    ID              shift and go to state 5
    PARENTESIS_APERTURA shift and go to state 6

    declaracion_variable           shift and go to state 3
    declaraciones                  shift and go to state 7
    declaracion_cad                shift and go to state 4

state 4

    (4) declaraciones -> declaracion_cad .

    $end            reduce using rule 4 (declaraciones -> declaracion_cad .)


state 5

    (30) declaracion_variable -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (31) declaracion_variable -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato
    (33) declaracion_variable -> ID . tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (34) declaracion_variable -> ID . PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (35) declaracion_variable -> ID . PARENTESIS_APERTURA tipo_dato ASIGNAR valor_dato PUNTO_COMA
    (36) declaracion_variable -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE valor_dato PUNTO_COMA
    (37) declaracion_variable -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR PUNTO_COMA
    (5) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (6) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES
    (8) declaracion_cad -> ID . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (9) declaracion_cad -> ID . PARENTESIS_APERTURA PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (10) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (11) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (12) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES COMILLAS_DOBLES PUNTO_COMA
    (13) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR CADENA COMILLAS_DOBLES PUNTO_COMA
    (14) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA PUNTO_COMA
    (15) declaracion_cad -> ID . PARENTESIS_APERTURA tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA caracteres_adicionales
    (38) tipo_dato -> . INT
    (39) tipo_dato -> . FLOAT
    (40) tipo_dato -> . BOOL
    (41) tipo_dato -> . STRING

    PARENTESIS_APERTURA shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12
    STRING          shift and go to state 13

    tipo_dato                      shift and go to state 9

state 6

    (32) declaracion_variable -> PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (7) declaracion_cad -> PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (38) tipo_dato -> . INT
    (39) tipo_dato -> . FLOAT
    (40) tipo_dato -> . BOOL
    (41) tipo_dato -> . STRING

    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12
    STRING          shift and go to state 13

    tipo_dato                      shift and go to state 14

state 7

    (2) declaraciones -> declaracion_variable declaraciones .

    $end            reduce using rule 2 (declaraciones -> declaracion_variable declaraciones .)


state 8

    (30) declaracion_variable -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (31) declaracion_variable -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR valor_dato
    (34) declaracion_variable -> ID PARENTESIS_APERTURA . PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (35) declaracion_variable -> ID PARENTESIS_APERTURA . tipo_dato ASIGNAR valor_dato PUNTO_COMA
    (36) declaracion_variable -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE valor_dato PUNTO_COMA
    (37) declaracion_variable -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR PUNTO_COMA
    (5) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (6) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES
    (9) declaracion_cad -> ID PARENTESIS_APERTURA . PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (10) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (11) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA
    (12) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES COMILLAS_DOBLES PUNTO_COMA
    (13) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR CADENA COMILLAS_DOBLES PUNTO_COMA
    (14) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA PUNTO_COMA
    (15) declaracion_cad -> ID PARENTESIS_APERTURA . tipo_dato PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA caracteres_adicionales
    (38) tipo_dato -> . INT
    (39) tipo_dato -> . FLOAT
    (40) tipo_dato -> . BOOL
    (41) tipo_dato -> . STRING

    PARENTESIS_CIERRE shift and go to state 16
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 12
    STRING          shift and go to state 13

    tipo_dato                      shift and go to state 15

state 9

    (33) declaracion_variable -> ID tipo_dato . PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (8) declaracion_cad -> ID tipo_dato . PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA

    PARENTESIS_CIERRE shift and go to state 17


state 10

    (38) tipo_dato -> INT .

    PARENTESIS_CIERRE reduce using rule 38 (tipo_dato -> INT .)
    ASIGNAR         reduce using rule 38 (tipo_dato -> INT .)


state 11

    (39) tipo_dato -> FLOAT .

    PARENTESIS_CIERRE reduce using rule 39 (tipo_dato -> FLOAT .)
    ASIGNAR         reduce using rule 39 (tipo_dato -> FLOAT .)


state 12

    (40) tipo_dato -> BOOL .

    PARENTESIS_CIERRE reduce using rule 40 (tipo_dato -> BOOL .)
    ASIGNAR         reduce using rule 40 (tipo_dato -> BOOL .)


state 13

    (41) tipo_dato -> STRING .

    PARENTESIS_CIERRE reduce using rule 41 (tipo_dato -> STRING .)
    ASIGNAR         reduce using rule 41 (tipo_dato -> STRING .)


state 14

    (32) declaracion_variable -> PARENTESIS_APERTURA tipo_dato . PARENTESIS_CIERRE ASIGNAR valor_dato PUNTO_COMA
    (7) declaracion_cad -> PARENTESIS_APERTURA tipo_dato . PARENTESIS_CIERRE ASIGNAR COMILLAS_DOBLES CADENA COMILLAS_DOBLES PUNTO_COMA

    PARENTESIS_CIERRE shift and go to state 18


state 15
